--- a/style.css
+++ b/style.css
@@ -4,16 +4,38 @@
   background-size: cover;
   background-repeat: no-repeat;
 }
-
+.bg-transparent {
+  background-color: rgba(0, 0, 1, 0.9);
+  backdrop-filter: blur(5px);
+}
 .hidden {
   display: none;
 }
 .modal-fipe {
   position: absolute;
+  font-size: 24px;
+  font-weight: bold;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 35%;
+  width: 30vw;
+  height: auto;
+  background-color: white;
   border-radius: 5px;
   z-index: 10;
+}
+.bg-style {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 10px;
+  background-color: blue;
+  text-transform: uppercase;
+  border: 1px solid transparent;
+  color: white;
+  padding: 5px;
+}
+.modal-main {
+  margin-top: 10px;
+  margin-left: 10px;
 }
